tests/baselines/reference/parserCommaInTypeMemberList1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList1.ts(1,23): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserCommaInTypeMemberList1.ts (1 errors) ====
    var v: { workItem: any, width: string };
                          ~
!!! error TS1005: ';' expected.